# mods-string-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mods_string_extractor/: __init__.py  cli.py  extractor.py  packer.py
tests/: test_extractor.py
