[project]
name = "mods-string-extractor"
version = "1.0.1"
description = "Extract translatable strings from Minecraft modpack mods and pack translations into resource packs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "zack-zzq" },
]
keywords = ["minecraft", "modpack", "translation", "i18n", "resource-pack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]

[project.scripts]
mods-string-extractor = "mods_string_extractor.cli:main"

[project.urls]
Homepage = "https://github.com/zack-zzq/mods-string-extractor"
Repository = "https://github.com/zack-zzq/mods-string-extractor"
Issues = "https://github.com/zack-zzq/mods-string-extractor/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mods_string_extractor"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
